Intermediate commit: eval
kpt:{"package":"b-bmh-template","workspaceName":"packagevariant-1","revision":"0","task":{"type":"eval","eval":{"image":"render","config":null,"match":{}}}}

--- a/b-bmh-template/bmc-secrets.yaml
+++ b/b-bmh-template/bmc-secrets.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata: # kpt-merge: /BMC_SECRET_PLACEHOLDER
-  name: BMC_SECRET_PLACEHOLDER # kpt-set: ${bmc-creds-name}
+  name: b-bmc-secret # kpt-set: ${bmc-creds-name}
   annotations:
     internal.kpt.dev/upstream-identifier: '|Secret|default|BMC_SECRET_PLACEHOLDER'
 type: Opaque
 data:
-  username: BMC_USERNAME_BASE64_PLACEHOLDER # kpt-set: ${bmc-username}
-  password: BMC_PASSWORD_BASE64_PLACEHOLDER # kpt-set: ${bmc-password}
+  username: YWRtaW4= # kpt-set: ${bmc-username}
+  password: d2NhdFU1aTV6dDdGCg== # kpt-set: ${bmc-password}
