--- a/b-bmh-template/bmh-template.yaml
+++ b/b-bmh-template/bmh-template.yaml
@@ -1,17 +1,17 @@
 apiVersion: metal3.io/v1alpha1
 kind: BareMetalHost
 metadata: # kpt-merge: /BMH_NAME_PLACEHOLDER
-  name: BMH_NAME_PLACEHOLDER # kpt-set: ${bmh-name}
+  name: b-bmh # kpt-set: ${bmh-name}
   annotations:
     internal.kpt.dev/upstream-identifier: 'metal3.io|BareMetalHost|default|BMH_NAME_PLACEHOLDER'
 spec:
   online: true
-  bootMACAddress: BOOT_MAC_ADDRESS # kpt-set: ${boot-mac-address}
+  bootMACAddress: b4:96:91:c4:d3:f4 # kpt-set: ${boot-mac-address}
   bootMode: UEFI
   disablePowerOff: false
   rootDeviceHints:
-    serialNumber: DRIVE_SERIAL_NUM_PLACEHOLDER # kpt-set: ${root-hints-serial-number}
+    serialNumber: S436NA0R757334 # kpt-set: ${root-hints-serial-number}
   bmc:
-    address: BMC_ADDRESS_PLACEHOLDER # kpt-set: ${bmc-address}
-    credentialsName: BMC_SECRET_PLACEHOLDER # kpt-set: ${bmc-creds-name}
+    address: ilo5-redfish://192.168.14.164/redfish/v1/Systems/1 # kpt-set: ${bmc-address}
+    credentialsName: b-bmc-secret # kpt-set: ${bmc-creds-name}
     disableCertificateVerification: true
